syntax = "proto3";

import "google/api/annotations.proto";
import "status.proto";

option csharp_namespace = "Mastodon.Grpc";

service BookmarkApi {
    
  rpc GetBookmarks (GetBookmarksRequest) returns (Statuses)
  {
	option (google.api.http) = {
      get: "/api/v1/bookmarks"
      response_body: "data"
    };
  }
}

message GetBookmarksRequest
{
    // Internal parameter. Use HTTP Link header for pagination.
    optional string max_id = 2;

    // Internal parameter. Use HTTP Link header for pagination.
    optional string since_id = 3;
    
    // Internal parameter. Use HTTP Link header for pagination.
    optional string min_id = 4;
    
    // Maximum number of results to return. Defaults to 40 accounts. Max 80 accounts.
    optional uint32 limit = 5;
}
